<resources>
    <string name="app_name">Shopping Share</string>
    <string name="welcomeQuote">You will never \'find\' time for anything. If you want time, you must make it. Charles Buxton</string>
    <string name="intro1">Let us help you spend less time in the supermarket</string>
    <string name="intro2">Join our community of shoppers making life quicker by sharing the load of shopping.</string>
    <string name="shopping">SHOPPING</string>
    <string name="continue_text">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="route">Route</string>
    <string name="email">Email</string>
    <string name="decrease_item_quantity">Decrease item quantity</string>
    <string name="increase_item_quantity">Increase item quantity</string>
    <string name="item">Item</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="the_cart_name">The Cart Name</string>
    <string name="kes_550">KES 550</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="prefix_kes">\"KES \"</string>
    <string name="hello_user">Hello User,</string>
    <string name="what_items_do_you">What items do you</string>
    <string name="reccomended_cart">Reccomended Cart</string>
    <string name="navigation_drawer_open">open menu</string>
    <string name="navigation_drawer_close">close menu</string>
    <string name="checkout_dialog_title">Enter Customer\'s Safaricom phone number to pay Kshs %1$d </string>
    <string name="checkout_value">clear_cart %1$d </string>

    <!-- Dialog Titles -->
    <string name="title_success">Payment Notification</string>
    <string name="title_wait">Please Wait</string>

    <!-- Dialog Messages-->
    <string name="dialog_message_success">Payment made successfully</string>
    <string name="dialog_message_processing">PProcessing…</string>

    <!-- Hints -->
    <string name="hint_phone_number">07xxxxxxxx</string>
</resources>