<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cultured">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/baloo_1"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/welcomeQuote"
        android:textColor="@color/jet"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/baloo_1"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/intro2"
        android:textColor="@color/jet"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cont_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/baloo_1"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/continue_text"
        android:textColor="#616161"
        android:textSize="18sp" />


</RelativeLayout>